--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1886,7 +1886,7 @@ ul {
   position: relative;
   font-family: "IRANSans";
   font-weight: 600;
-  font-size: 15px;
+  font-size: 20px;
 }
 .navbar-area .navbar-collapse .navbar-nav .nav-item .nav-link:before {
   position: absolute;
@@ -2922,7 +2922,7 @@ ul {
   color: #ffd3c8;
   position: absolute;
   right: 0;
-  top: 0;
+  top: 12px;
 }
 .support-bar-two .right-content ul li .single-support-info-item .content {
   padding-right: 20px;
